# bootz

./: .gitignore  .gitleaksignore  .trivyignore  BUILD.bazel  CONTRIBUTING.md  Dockerfile.sut  MODULE.bazel  README.md  WORKSPACE  bootz_deps.bzl  bootz_go_deps.bzl  common.bzl  deps.bzl  design.md  go.mod  go.sum  regenerate-files.sh
.bcr/: metadata.template.json
.github/: renovate.json  typos.toml
.github/linters/: .gitleaks.toml  .yaml-lint.yml
.github/workflows/: bazel.yml  bootz.yml  go.yml  linter.yml  typo.yml
client/: BUILD.bazel  README.md  client.go
common/owner_certificate/: BUILD.bazel  owner_certificate.go  owner_certificate_test.go
common/ownership_voucher/: BUILD.bazel  ownership_voucher.go  ownership_voucher_test.go
common/ownership_voucher/testdata/: ov_123A.txt  pdc_pub.pem  vendorca_priv.pem
common/signature/: BUILD.bazel  signature.go  signature_test.go
common/tls/: BUILD.bazel  tls.go  tls_test.go
common/types/: BUILD.bazel  types.go
dhcp/: BUILD.bazel  Dockerfile  dhcp.go  dhcp_test.go
dhcp/deploy/: deployment.yaml  kubernetes.txtpb  service.yaml
dhcp/main/: BUILD.bazel  dhcp.go
dhcp/plugins/: bootz.go
dhcp/plugins/bootz/: BUILD.bazel  bootz.go
dhcp/plugins/slease/: BUILD.bazel  slease.go
dhcp/proto/: BUILD.bazel  config.proto  dhcpconfig.proto
dhcp/proto/config/: config.pb.go
dhcp/proto/dhcpconfig/: dhcpconfig.pb.go
dhcp/sutserver/: sutserver.go
http/: BUILD.bazel  Dockerfile  http.go
http/deploy/: deployment.yaml  kubernetes.txtpb  service.yaml
http/main/: BUILD.bazel  http.go
http/sutserver/: sutserver.go
proto/: BUILD.bazel  bootz.proto  test.proto
proto/bootz/: BUILD.bazel  bootz.pb.go  bootz_grpc.pb.go
proto/test/: test.pb.go  test_grpc.pb.go
server/: BUILD.bazel  README.md  server.go  server_test.go
server/artifactmanager/: BUILD.bazel  artifactmanager.go
server/chassismanager/: BUILD.bazel  chassismanager.go  chassismanager_test.go
server/controller/: controller.go
server/emulator/: BUILD.bazel  README.md  main.go
server/entitymanager/: BUILD.bazel  entitymanager.go  entitymanager_test.go
server/entitymanager/proto/: BUILD.bazel  entity.proto  generate.sh
server/entitymanager/proto/entity/: entity.pb.go
server/entitymanager/proto/entity/entity/: entity.pb.go
server/entitymanager/testdata/: authz.json  bootz.cert.pem  bootz.key.pem  chassis.prototxt  devices.yaml
server/fileentitymanager/: fileentitymanager.go
server/proto/: BUILD.bazel  config.proto
server/proto/config/: config.pb.go
server/service/: BUILD.bazel  service.go  service_test.go
server/sut/: main.go
server/sut/deploy/: deployment.yaml  kubernetes.txtpb  service.yaml
server/sutstate/: sutstate.go
server/tests/: README.md
server/tests/monax_integration/: abstract_sut.txtpb  bootz_test.go  bootz_test_kubernetes.sh  cleanup_sut.sh  kubernetes_library.txtpb  kubernetes_runtime_parameters.txtpb  testbed.textproto
server/tests/monax_integration/runner/: runner.go
server/tests/proto/: BUILD.bazel  sut.proto  test.proto
server/tests/proto/sut/: sut.pb.go  sut_grpc.pb.go
server/tests/proto/test/: test.pb.go
test/: BUILD.bazel  README.md  bootz_test.go  monax_bootz.go  run_bootz_with_http.sh  run_bootz_with_http_and_dhcp.sh  run_dhcp_only.sh
test/config/: bootz_config.textproto  dhcp_config.textproto
test/dut/: BUILD.bazel  dut.go
test/sut/: abstract_sut.txtpb  kind_config.yaml  kubernetes_library.txtpb  kubernetes_runtime_parameters.txtpb
test/sut/bootz/: Dockerfile  deployment.yaml  kubernetes.txtpb  service.yaml
test/sut/http/: Dockerfile  deployment.yaml  kubernetes.txtpb  service.yaml
testdata/: BUILD.bazel  README.md  artifacts.go  artifacts_gen.go  authz.prototext  bootz_config.textproto  ca.pem  cisco.cfg  dhcp_config.textproto  generate.go  inv_with_wrong_sec.prototxt  inventory.prototxt  inventory_local.prototxt  oc_config.prototext  oc_priv.pem  oc_pub.pem  ov_123A.txt  ov_123B.txt  pdc_priv.pem  pdc_pub.pem  vendor_ca_cert.txt  vendor_ca_key.txt  vendorca_priv.pem  vendorca_pub.pem  wrong_inventory.prototxt
tests/sut/dhcp/: Dockerfile
