load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_binary")

go_library(
    name = "client_lib",
    srcs = ["client.go"],
    importpath = "github.com/openconfig/bootz/client",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_glog//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)
