load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//:common.bzl", "use_new_compilers")

package(default_visibility = ["//visibility:public"])

use_new_compilers()

proto_library(
    name = "bootz_proto",
    srcs = ["bootz.proto"],
    deps = [
        "//github.com/openconfig/gnsi/authz:authz_proto",
        "//github.com/openconfig/gnsi/certz:certz_proto",
        "//github.com/openconfig/gnsi/credentialz:credentialz_proto",
        "//github.com/openconfig/gnsi/pathz:pathz_proto",
        "@com_google_protobuf//:struct_proto",
    ],
)

##############################################################################
# Go
##############################################################################

go_proto_library(
    name = "bootz_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/openconfig/bootz/proto/bootz",
    proto = ":bootz_proto",
    deps = [
        "//github.com/openconfig/gnsi/authz:authz_proto",
        "//github.com/openconfig/gnsi/certz:certz_proto",
        "//github.com/openconfig/gnsi/credentialz:credentialz_proto",
        "//github.com/openconfig/gnsi/pathz:pathz_proto",
    ],
)

go_library(
    name = "bootz",
    embed = [":bootz_go_proto"],
    importpath = "github.com/openconfig/bootz/proto/bootz",
)
