# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("//:common.bzl", "use_new_compilers")

package(default_visibility = ["//visibility:public"])

use_new_compilers()

proto_library(
    name = "bootz_proto",
    srcs = ["bootz.proto"],
    deps = [
        "@com_github_openconfig_gnsi//authz:authz_proto",
        "@com_github_openconfig_gnsi//certz:certz_proto",
        "@com_github_openconfig_gnsi//credentialz:credentialz_proto",
        "@com_github_openconfig_gnsi//pathz:pathz_proto",
        "@com_google_protobuf//:struct_proto",
    ],
)

##############################################################################
# Go
##############################################################################

go_proto_library(
    name = "bootz_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/openconfig/bootz/proto/bootz",
    proto = ":bootz_proto",
    deps = [
        "@com_github_openconfig_gnsi//authz:authz_go_proto",
        "@com_github_openconfig_gnsi//certz:certz_go_proto",
        "@com_github_openconfig_gnsi//credentialz:credentialz_go_proto",
        "@com_github_openconfig_gnsi//pathz:pathz_go_proto",
    ],
)

go_library(
    name = "bootz",
    embed = [":bootz_go_proto"],
    importpath = "github.com/openconfig/bootz/proto/bootz",
)
