load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "testdata_lib",
    srcs = ["generate.go"],
    importpath = "github.com/openconfig/bootz/testdata",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_golang_glog//:glog",
        "@org_mozilla_go_pkcs7//:pkcs7",
    ],
)

go_binary(
    name = "testdata",
    embed = [":testdata_lib"],
    visibility = ["//visibility:public"],
)
