load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "types",
    srcs = ["types.go"],
    importpath = "github.com/openconfig/bootz/common/types",
    visibility = ["//visibility:public"],
    deps = [
        "//proto:bootz",
        "@openconfig_attestz//proto:tpm_enrollz_go",
        "@openconfig_gnsi//authz",
    ],
)
