load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bootz",
    srcs = [
        "bootz.pb.go",
        "bootz_grpc.pb.go",
    ],
    importpath = "github.com/openconfig/bootz/proto/bootz",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_openconfig_gnsi//authz",
        "@com_github_openconfig_gnsi//certz",
        "@com_github_openconfig_gnsi//credentialz",
        "@com_github_openconfig_gnsi//pathz",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
        "@org_golang_google_protobuf//runtime/protoimpl:go_default_library",
        "@org_golang_google_protobuf//types/known/structpb:go_default_library",
    ],
)
