# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@bazel_lib//lib:testing.bzl", "assert_archive_contains")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@tar.bzl", "mutate", "tar")

go_library(
    name = "emulator_lib",
    srcs = ["main.go"],
    importpath = "github.com/openconfig/bootz/server/emulator",
    visibility = ["//visibility:private"],
    deps = [
        "//dhcp",
        "//dhcp/proto:dhcpconfig",
        "//http",
        "//server/proto:config",
        "//server:server_lib",
        "@com_github_golang_glog//:glog",
        "@org_golang_google_protobuf//encoding/prototext",
    ],
)

go_binary(
    name = "emulator",
    embed = [":emulator_lib"],
    visibility = ["//visibility:public"],
)

tar(
    name = "emulator_layer",
    srcs = [":emulator"],
    out = "emulator_layer.tar",
    mutate = mutate(strip_prefix = package_name() + "/emulator_"),
)

assert_archive_contains(
    name = "test_emulator_layer",
    archive = "emulator_layer.tar",
    expected = ["emulator"],
)

oci_image(
    name = "bootz_server_image",
    base = "@distroless_base",
    entrypoint = ["/emulator"],
    tars = [":emulator_layer"],
)

oci_load(
    name = "load_bootz_server_image",
    image = ":bootz_server_image",
    repo_tags = ["open-config-bootz-server:latest"],
)