load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "entitymanager",
    srcs = ["entitymanager.go"],
    importpath = "github.com/openconfig/bootz/server/entitymanager",
    visibility = ["//visibility:public"],
    deps = [
        "//proto:bootz",
        "//server/service",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
