# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "entitymanager",
    srcs = ["entitymanager.go"],
    importpath = "github.com/openconfig/bootz/server/entitymanager",
    visibility = ["//visibility:public"],
    deps = [
        "//common/owner_certificate",
        "//common/signature",
        "//common/types",
        "//proto:bootz",
        "//server/entitymanager/proto",
        "@com_github_golang_glog//:glog",
        "@openconfig_attestz//proto:tpm_enrollz_go",
        "@openconfig_gnsi//authz",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/prototext",
        "@org_golang_google_protobuf//proto",
    ],
)
