# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "config_proto",
    srcs = ["config.proto"],
    import_prefix = "github.com/openconfig/bootz",
    deps = [
        "//proto:bootz_proto",
        "@openconfig_attestz//proto:tpm_enrollz_proto",
        "@openconfig_gnsi//authz:authz_proto",
        "@openconfig_gnsi//pathz:pathz_proto",
    ],
)

##############################################################################
# Go
##############################################################################

go_proto_library(
    name = "config_go_proto",
    importpath = "github.com/openconfig/bootz/server/proto/config",
    proto = ":config_proto",
    deps = [
        "//proto:bootz",
        "@openconfig_attestz//proto:tpm_enrollz_go",
        "@openconfig_gnsi//authz",
        "@openconfig_gnsi//pathz",
    ],
)

go_library(
    name = "config",
    embed = [":config_go_proto"],
    importpath = "github.com/openconfig/bootz/server/proto/config",
)
