# Copyright 2023 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "service",
    srcs = ["service.go"],
    importpath = "github.com/openconfig/bootz/server/service",
    visibility = ["//visibility:public"],
    deps = [
        "//common/signature",
        "//common/types",
        "//proto:bootz",
        "@com_github_golang_glog//:glog",
        "@com_github_google_go_tpm//tpm2",
        "@openconfig_attestz//proto:tpm_enrollz_go",
        "@openconfig_attestz//service/biz:enrollz_biz",
        "@openconfig_attestz//service/biz:tpm20_utils",
        "@openconfig_gnmi//errlist",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//peer",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "service_test",
    srcs = ["service_test.go"],
    embed = [":service"],
    deps = [
        "//common/types",
        "//proto:bootz",
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_go_tpm//tpm2",
        "@openconfig_attestz//proto:tpm_enrollz_go",
        "@openconfig_attestz//service/biz:enrollz_biz",
        "@openconfig_attestz//service/biz:tpm20_utils",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//peer",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)
