load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "bootz",
    srcs = ["bootz.go"],
    importpath = "github.com/openconfig/bootz/dhcp/plugins/bootz",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_coredhcp_coredhcp//handler",
        "@com_github_coredhcp_coredhcp//logger",
        "@com_github_coredhcp_coredhcp//plugins",
        "@com_github_insomniacslk_dhcp//dhcpv4",
        "@com_github_insomniacslk_dhcp//dhcpv6",
    ],
)
