load("@com_google_protobuf//bazel:proto_library.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "entity_proto",
    srcs = ["entity.proto"],
    import_prefix = "github.com/openconfig/bootz",
    deps = [
        "//proto:bootz_proto",
        "@com_google_protobuf//:struct_proto",
        "@openconfig_attestz//proto:tpm_enrollz_proto",
        "@openconfig_gnsi//authz:authz_proto",
        "@openconfig_gnsi//certz:certz_proto",
        "@openconfig_gnsi//pathz:pathz_proto",
    ],
)

##############################################################################
# Go
##############################################################################

go_proto_library(
    name = "entity_go_proto",
    importpath = "github.com/openconfig/bootz/server/entitymanager/proto/entity",
    proto = ":entity_proto",
    deps = [
        "//proto:bootz",
        "@openconfig_attestz//proto:tpm_enrollz_go",
        "@openconfig_gnsi//authz",
        "@openconfig_gnsi//certz",
        "@openconfig_gnsi//pathz",
    ],
)

go_library(
    name = "entity",
    embed = [":entity_go_proto"],
    importpath = "github.com/openconfig/server/entitymanager/proto/entity",
)

go_library(
    name = "proto",
    embed = [":entity_go_proto"],
    importpath = "github.com/openconfig/bootz/server/entitymanager/proto/entity",
)
